ajuste package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
-{
-  "homepage":"http://dariomb96.github.io/PoopifyReact-Betancourt/",
+{  
+  "homepage":"http://dariomb96.github.io/",
   "name": "poopify",
   "version": "0.1.0",
   "private": true,
